--- a/src/app/components/create-question-page/create-question-page.component.html
+++ b/src/app/components/create-question-page/create-question-page.component.html
@@ -1,18 +1,20 @@
 <div>
   <h1 class="mat-headline-2">Create a question</h1>
   <div>
-    <label id="question-type" class="mat-subtitle-1"
+    <label id="question-type" class="mat-headline-5"
       >Select a question type:</label
     >
     <mat-radio-group
       aria-labelledby="question-type"
       class="radio-group-container"
-      [(ngModel)]="selectedTypeId"
+      [ngModel]="selectedTypeId"
+      (ngModelChange)="onTypeChange($event)"
     >
       <mat-radio-button *ngFor="let type of types" [value]="type.id">
         {{ type.label }}
       </mat-radio-button>
     </mat-radio-group>
-    <div>Selected type id: {{ selectedTypeId }}</div>
+
+    <ng-template appQuestion></ng-template>
   </div>
 </div>
