--- a/src/app/components/create-question-page/create-question-page.component.html
+++ b/src/app/components/create-question-page/create-question-page.component.html
@@ -1,6 +1,6 @@
-<div>
+<div class="container">
   <h1 class="mat-headline-2">Create a question</h1>
-  <div>
+  <div class="container">
     <label id="question-type" class="mat-headline-5"
       >Select a question type:</label
     >
@@ -15,6 +15,8 @@
       </mat-radio-button>
     </mat-radio-group>
 
-    <ng-template appQuestion></ng-template>
+    <p class="mat-headline-5">Specify question info:</p>
+
+    <ng-template appQuestion> </ng-template>
   </div>
 </div>
