--- a/src/app/components/single-choice-question-form/single-choice-question-form.component.html
+++ b/src/app/components/single-choice-question-form/single-choice-question-form.component.html
@@ -1,1 +1,63 @@
-<p>single-choice-question-form works!</p>
+<form [formGroup]="form" novalidate (ngSubmit)="onSubmit()">
+  <mat-form-field>
+    <input
+      matInput
+      placeholder="Question text"
+      formControlName="questionText"
+      type="text"
+    />
+    <mat-error *ngIf="form.controls.questionText.hasError('required')">
+      Question text is required
+    </mat-error>
+  </mat-form-field>
+
+  <div class="add-option-button">
+    <button
+      mat-stroked-button
+      type="button"
+      color="primary"
+      (click)="addOption()"
+    >
+      Add option
+    </button>
+  </div>
+
+  <div
+    formArrayName="options"
+    *ngFor="let option of form.controls.options.controls; index as i"
+  >
+    <mat-form-field>
+      <input matInput placeholder="Option" [formControlName]="i" />
+      <mat-error *ngIf="option.hasError('required')">
+        Option is required
+      </mat-error>
+    </mat-form-field>
+    <button
+      mat-stroked-button
+      type="button"
+      color="warn"
+      class="delete-button"
+      (click)="deleteOption(i)"
+    >
+      Delete
+    </button>
+  </div>
+
+  <div *ngIf="isShowErrors" class="option-errors">
+    <mat-error *ngIf="form.controls.options.hasError('maxlength')">
+      At most five options are allowed
+    </mat-error>
+
+    <mat-error *ngIf="form.controls.options.hasError('minlength')">
+      At least two answer options are required
+    </mat-error>
+
+    <mat-error *ngIf="form.controls.options.hasError('required')">
+      Answer options are required
+    </mat-error>
+  </div>
+
+  <div class="options">
+    <button mat-raised-button type="submit" color="primary">Save</button>
+  </div>
+</form>
