--- a/src/styles.scss
+++ b/src/styles.scss
@@ -8,3 +8,8 @@ body {
   margin: 0;
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
+
+.container {
+  width: fit-content;
+  margin: 0 auto;
+}
