add an ability to select an answer

--- a/src/app/components/create-question-page/create-question-page.component.html
+++ b/src/app/components/create-question-page/create-question-page.component.html
@@ -1,5 +1,5 @@
 <div class="container">
-  <h1 class="mat-headline-2">Create a question</h1>
+  <h1 class="mat-headline-2 title">Create a question</h1>
   <div class="container">
     <label id="question-type" class="mat-headline-5"
       >Select a question type:</label
