--- a/src/app/components/single-choice-question-form/single-choice-question-form.component.html
+++ b/src/app/components/single-choice-question-form/single-choice-question-form.component.html
@@ -57,6 +57,22 @@
     </mat-error>
   </div>
 
+  <div *ngIf="form.controls.options.valid">
+    <label id="answer" class="mat-headline-5">Select an answer:</label>
+    <mat-radio-group
+      aria-labelledby="answer"
+      class="radio-group-container"
+      formControlName="answerOptionIdx"
+    >
+      <mat-radio-button
+        *ngFor="let option of form.value.options; index as i"
+        [value]="i"
+      >
+        {{ option }}
+      </mat-radio-button>
+    </mat-radio-group>
+  </div>
+
   <div class="options">
     <button mat-raised-button type="submit" color="primary">Save</button>
   </div>
