--- a/src/styles.scss
+++ b/src/styles.scss
@@ -13,3 +13,14 @@ body {
   width: fit-content;
   margin: 0 auto;
 }
+
+.title {
+  text-align: center;
+}
+
+.radio-group-container {
+  display: flex;
+  flex-direction: column;
+  margin: 15px 0;
+  align-items: flex-start;
+}
