extract form-options component

--- a/src/app/components/single-choice-question-form/single-choice-question-form.component.html
+++ b/src/app/components/single-choice-question-form/single-choice-question-form.component.html
@@ -73,7 +73,5 @@
     </mat-radio-group>
   </div>
 
-  <div class="options">
-    <button mat-raised-button type="submit" color="primary">Save</button>
-  </div>
+  <app-form-options></app-form-options>
 </form>
