--- a/src/app/components/form-options/form-options.component.html
+++ b/src/app/components/form-options/form-options.component.html
@@ -1,4 +1,4 @@
 <div class="options">
-  <button mat-raised-button type="button">Cancel</button>
+  <button mat-raised-button type="button" (click)="onCancel()">Cancel</button>
   <button mat-raised-button type="submit" color="primary">Save</button>
 </div>
