--- a/src/styles.scss
+++ b/src/styles.scss
@@ -9,6 +9,12 @@ body {
   font-family: Roboto, "Helvetica Neue", sans-serif;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+  box-sizing: border-box;
+}
+
 .container {
   width: fit-content;
   margin: 0 auto;
