--- a/src/app/components/layout/layout.component.scss
+++ b/src/app/components/layout/layout.component.scss
@@ -1,3 +1,9 @@
 .container {
-  padding: 40px;
+  padding: 40px 10px;
+}
+
+@media screen and (min-width: 600px) {
+  .container {
+    padding: 40px;
+  }
 }
