--- a/src/app/components/question-lists-page/question-lists-page.component.html
+++ b/src/app/components/question-lists-page/question-lists-page.component.html
@@ -1,1 +1,22 @@
-<p>question-lists-page works!</p>
+<div class="container">
+  <h1 class="cdk-visually-hidden">Lists of questions</h1>
+
+  <div *ngIf="!questions.length; else lists">No questions found.</div>
+
+  <ng-template #lists>
+    <div class="column-container">
+      <section class="column" aria-labelledby="unanswered">
+        <h2 id="unanswered" class="mat-headline-4">Unanswered</h2>
+        <div *ngFor="let unanswered of unansweredQuestions">
+          <ng-template appQuestion> </ng-template>
+        </div>
+      </section>
+      <section class="column" aria-labelledby="answered">
+        <h2 id="answered" class="mat-headline-4">Answered</h2>
+        <div *ngFor="let answered of answeredQuestions">
+          <ng-template appQuestion> </ng-template>
+        </div>
+      </section>
+    </div>
+  </ng-template>
+</div>
