--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,9 @@
 /* You can add global styles to this file, and also import other style files */
 
+:root {
+  --question-card-width: 250px;
+}
+
 html,
 body {
   height: 100%;
