--- a/src/app/components/single-choice-question-card/single-choice-question-card.component.html
+++ b/src/app/components/single-choice-question-card/single-choice-question-card.component.html
@@ -8,7 +8,7 @@
       <mat-radio-group
         [(ngModel)]="answerIdx"
         class="radio-group-container"
-        [disabled]="question?.isAnswered || false"
+        [disabled]="question?.answeredAt || false"
       >
         <mat-radio-button
           *ngFor="let option of question?.options; index as i"
@@ -19,7 +19,7 @@
       </mat-radio-group>
     </mat-card-content>
 
-    <mat-card-actions *ngIf="question?.isAnswered; else unanswered">
+    <mat-card-actions *ngIf="question?.answeredAt; else unanswered">
       <button mat-stroked-button color="warn" (click)="onRollback()">
         Rollback
       </button>
