--- a/src/app/components/question-page/question-page.component.html
+++ b/src/app/components/question-page/question-page.component.html
@@ -1,19 +1,21 @@
 <div class="container">
   <h1 class="mat-headline-2 title">{{ title }}</h1>
   <div class="container">
-    <label id="question-type" class="mat-headline-5">Select a type:</label>
-    <mat-radio-group
-      aria-labelledby="question-type"
-      class="radio-group-container"
-      [ngModel]="selectedTypeId"
-      (ngModelChange)="onTypeChange($event)"
-    >
-      <mat-radio-button *ngFor="let type of types" [value]="type.id">
-        {{ type.label }}
-      </mat-radio-button>
-    </mat-radio-group>
+    <ng-template *ngIf="id == null">
+      <label id="question-type" class="mat-headline-5">Select a type:</label>
+      <mat-radio-group
+        aria-labelledby="question-type"
+        class="radio-group-container"
+        [ngModel]="selectedTypeId"
+        (ngModelChange)="onTypeChange($event)"
+      >
+        <mat-radio-button *ngFor="let type of types" [value]="type.id">
+          {{ type.label }}
+        </mat-radio-button>
+      </mat-radio-group>
 
-    <p class="mat-headline-5">Specify info:</p>
+      <p class="mat-headline-5">Specify info:</p>
+    </ng-template>
 
     <ng-template appQuestion> </ng-template>
   </div>
