--- a/src/app/components/question-page/question-page.component.html
+++ b/src/app/components/question-page/question-page.component.html
@@ -1,7 +1,7 @@
 <div class="container">
   <h1 class="mat-headline-2 title">{{ title }}</h1>
   <div class="container">
-    <ng-template *ngIf="id == null">
+    <div *ngIf="id == null">
       <label id="question-type" class="mat-headline-5">Select a type:</label>
       <mat-radio-group
         aria-labelledby="question-type"
@@ -15,7 +15,7 @@
       </mat-radio-group>
 
       <p class="mat-headline-5">Specify info:</p>
-    </ng-template>
+    </div>
 
     <ng-template appQuestion> </ng-template>
   </div>
