--- a/src/app/components/questions/forms/multiple-choices-form/multiple-choices-form.component.html
+++ b/src/app/components/questions/forms/multiple-choices-form/multiple-choices-form.component.html
@@ -49,7 +49,7 @@
     </mat-error>
 
     <mat-error *ngIf="form.controls.options.hasError('minlength')">
-      At least two answer options are required
+      At least two options are required
     </mat-error>
 
     <mat-error *ngIf="form.controls.options.hasError('required')">
