fix multiple choice question

--- a/src/app/components/questions/cards/multiple-choice-question-card/multiple-choice-question-card.component.html
+++ b/src/app/components/questions/cards/multiple-choice-question-card/multiple-choice-question-card.component.html
@@ -22,7 +22,7 @@
       </button>
     </mat-card-actions>
     <ng-template #unanswered>
-      <mat-card-actions *ngIf="isAnswerValid">
+      <mat-card-actions *ngIf="isSomeAnswerSelected">
         <button mat-raised-button color="primary" (click)="onAnswer()">
           Answer
         </button>
