check for duplicate question when creating open question

--- a/src/app/components/questions/forms/open-question-form/open-question-form.component.html
+++ b/src/app/components/questions/forms/open-question-form/open-question-form.component.html
@@ -1,4 +1,5 @@
 <form [formGroup]="form" novalidate (ngSubmit)="onSubmit()">
+  <!-- TODO: extract and reuse in other forms -->
   <mat-form-field>
     <input
       matInput
@@ -8,6 +9,9 @@
     />
     <mat-error *ngIf="form.controls.questionText.hasError('required')">
       Question text is required
+    </mat-error>
+    <mat-error *ngIf="form.controls.questionText.hasError('duplicateQuestion')">
+      Same question already exists
     </mat-error>
   </mat-form-field>
 
